--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write .",
+    "prettier:check": "prettier --check ."
   },
   "author": "Alexander Taimasov",
   "license": "MIT",
   "devDependencies": {
     "lightningcss": "^1.28.2",
+    "prettier": "3.4.2",
     "sass": "^1.81.0",
     "sharp": "^0.33.5",
     "svgo": "^3.3.2",
