--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "Alexander Taimasov",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0",
     "lightningcss": "^1.28.2",
     "prettier": "3.4.2",
     "sass": "^1.81.0",
