--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "prettier": "prettier --write .",
-    "prettier:check": "prettier --check ."
+    "prettier:check": "prettier --check .",
+    "lint": "eslint . --ignore-pattern '.config/*'"
   },
   "author": "Alexander Taimasov",
   "license": "MIT",
